--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,16 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "aiogram>=3.20.0",
+    "fastapi>=0.115.12",
+    "pydantic-settings>=2.8.1",
+    "python-json-logger>=3.3.0",
+    "tzdata>=2025.2",
+]
+
+[dependency-groups]
+lint = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
+]
