🖊 refactor: change .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ BOT__LOGGER__LEVEL=DEBUG
 # Host address for webhook
 BOT__HOST__ADDRESS="example.com"
 
-# Bot admins ids (add desired ids here
+# Bot admins ids (add desired ids here)
 BOT__ADMINS__IDS=[727271721727]
